--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -5,7 +5,7 @@ services:
     build: .
     container_name: lamp_web
     ports:
-      - "8090:80"
+      - "8090:80"      # changed from 8080 to 8090
     depends_on:
       - db
 
@@ -25,7 +25,7 @@ services:
     image: jenkins/jenkins:lts
     container_name: jenkins
     ports:
-      - "8081:8080"
+      - "8081:8080"    # Jenkins UI on host:8081
       - "50000:50000"
     volumes:
       - jenkins_home:/var/jenkins_home
