--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -1,14 +1,15 @@
-version: '3.8'
 
+version: '3.8'
 services:
   web:
     build: .
     container_name: lamp_web
     ports:
       - "8090:80"
+    volumes:
+      - ./:/var/www/html/
     depends_on:
       - db
-
   db:
     image: mysql:5.7
     container_name: lamp_db
@@ -20,6 +21,5 @@ services:
       MYSQL_PASSWORD: pass
     volumes:
       - db_data:/var/lib/mysql
-
 volumes:
   db_data:
